fix: update button container styles for better alignment and responsiveness; correct blue color variable

--- a/src/gui/src/stylesheets/variables.css
+++ b/src/gui/src/stylesheets/variables.css
@@ -21,7 +21,7 @@
     --color-red-deep: #E7000B;
 
     --color-blue-light: #DBEAFE;
-    --color-blue-deep: #116EFE;
+    --color-blue-deep: #116CFD;
     --color-blue-dark: #294da9;
 
     --color-yellow-light: #FEF9C2;
